--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ td, th {
     height: 20px;
     border: 1px solid black;
     text-align: center;
+    padding: 5px;
 }
 
 th {
@@ -22,9 +23,14 @@ th {
     color: #EEE;
 }
 
-tr:nth-child(odd) > td {
-    background-color: rgb(236, 255, 159);
+
+/* Calculate the index based on the row and column */
+tr:nth-child(odd) td:nth-child(even),
+tr:nth-child(even) td:nth-child(odd) {
+    background-color: rgb(245, 255, 206);
 }
-tr:nth-child(even) > td {
-    background-color: rgb(160, 255, 241);
+
+tr:nth-child(odd) td:nth-child(odd),
+tr:nth-child(even) td:nth-child(even) {
+    background-color: rgb(211, 253, 247);
 }
